# SunPoseViewer

./: CMakeLists.txt  LICENSE  ReadMe.md
include/: MainWindow.h  MainWindow.ui  MockPositioner.cpp  Positioner.cpp  Positioner.h  ResultsWindow.h  SunVisualizer.h  SunWidget.h
src/: AstronomyCalculator.cpp  AstronomyCalculator.h  MainWindow.cpp  MainWindow.h  ResultsWindow.cpp  SunVisualizer.cpp  SunWidget.cpp  SunWidget.h  main.cpp
src/libs/: AOEcat.cpp  APC_DE.cpp  APC_IO.cpp  APC_Math.cpp  APC_VecMat3D.cpp  APC_VecMat3D.h  Coco.cpp  Comet.cpp  EclTimer.cpp  Eclipse.cpp  Foto.cpp  GNU_iomanip.h  Gauss.cpp  Luna.cpp  Numint.cpp  Occult.cpp  PPMbin.cpp  PPMcat.cpp  Phases.cpp  Phys.cpp  Planpos.cpp  Planrise.cpp  Sunset.cpp
src/models/: SunPositionCalculator.cpp  SunPositionCalculator.h
src/tests/: SunCalculationTests.cpp  SunCalculationTests.h  runTests.cpp
src/views/: MainWindow.cpp  SunVisualizer.cpp  SunWidget.cpp
ui/: MainWindow.ui
